--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 			display: block;
 			text-align: center;
 			margin: 0 auto;
-			width: 250px;
-			height: 100px;
+			width: 400px;
+			height: 300px;
 			position: relative;
 			font-size: 16px;
 		}
 
 		.wrapper span {
 			position: relative;
+			display: inline-block;
+		}
+
+		.space {
+			display: inline-block;
+			width: 2px;
 		}
 	</style>
 </head>
